# ChangeLog for x11-base/xorg-server
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/x11-base/cvs-repo/gentoo-x86/x11-base/xorg-server/ChangeLog,v 1.346 2008/07/05 21:26:28 dberkholz Exp $

  05 Jul 2008; Donnie Berkholz <dberkholz@gentoo.org>;
  xorg-server-1.4.99.905.ebuild:
  Update dependencies to the new versions I bumped yesterday.

*xorg-server-1.4.99.905 (01 Jul 2008)

  01 Jul 2008; Donnie Berkholz <dberkholz@gentoo.org>;
  +xorg-server-1.4.99.905.ebuild:
  Bump to the latest RC.

  27 Jun 2008; Donnie Berkholz <dberkholz@gentoo.org>;
  -files/1.4.2-unbreak-endianess.patch, xorg-server-1.4.2.ebuild:
  (#227821) Remove patch because ati 6.9 driver appears to work fine without
  it and breaks with it. If anyone wants to revert this, please discuss it
  on the bug in advance.

  27 Jun 2008; Donnie Berkholz <dberkholz@gentoo.org>;
  xorg-server-1.4.2.ebuild, xorg-server-1.4.99.902.ebuild:
  Update deps related to xf86-video-ati split out of mach64/r128 drivers.
  Pull in the latest versions of each.

  24 Jun 2008; <chainsaw@gentoo.org> xorg-server-1.4.99.902.ebuild:
  As of 173.14.09 we can stop blocking the nVidia proprietary drivers for
  the 1.5 pre-release. Closes bug #226151 by Chris Gianelloni
  <wolf31o2@gentoo.org>.

  17 Jun 2008; Hanno Boeck <hanno@gentoo.org> xorg-server-1.4.99.902.ebuild:
  Lower pixman dep, pixman 0.11 has many issues.

  15 Jun 2008; Jeroen Roovers <jer@gentoo.org>
  xorg-server-1.3.0.0-r6.ebuild:
  Stable for HPPA (bug #225419).

  15 Jun 2008; Luca Barbato <lu_zero@gentoo.org>
  +files/1.4.2-unbreak-endianess.patch, xorg-server-1.4.2.ebuild:
  Make xorg-server build again on ppc

  13 Jun 2008; Donnie Berkholz <dberkholz@gentoo.org>;
  xorg-server-1.4.2.ebuild:
  void driver must be at least 1.1.1.

  13 Jun 2008; Steve Dibb <beandog@gentoo.org>
  xorg-server-1.3.0.0-r6.ebuild:
  amd64 stable, bug 225419

  13 Jun 2008; Tobias Scherbaum <dertobi123@gentoo.org>