@@ -54,6 +54,7 @@ DIST xorg-server-1.4.2.tar.bz2 6216638 RMD160 6f12b28d7e4186dfbdec3c9116c65e6831
 DIST xorg-server-1.4.99.902-patches.tar.bz2 503932 RMD160 e3211e49d88b5d242bb99933c29a30720421e15c SHA1 a1d72a5635972bf0f4baf8067a1197787c701250 SHA256 da99f916d485d4ab9406d9ce1506134178795edb28e5187c262692b793ead2c7
 DIST xorg-server-1.4.99.902.tar.bz2 5512504 RMD160 d378a26a0b716c62f8ccad0f974032ae994cd0e0 SHA1 82717eb34951b1dc7815c05e9599bf70fae8cfa4 SHA256 d613eabc93c9de9e15dfb026b43dd8edd536bb4cbdb3c5dce03ce07e4c80f496
 DIST xorg-server-1.4.99.905.tar.bz2 5631334 RMD160 24ad3704db80c54eb5c19012c608b908eb7ade9e SHA1 e68c18b84277b06160cfe5667319e24cfc98ae8f SHA256 8b2e2fdaf83f803157a54e2314a8ae1e8ef5dc3db00e5b6b19f0cfe5da2f2d53
+DIST xorg-server-1.4.99.906.tar.bz2 5628932 RMD160 b08a06978228252771c6cddb950bca4b8bb3d306 SHA1 396818f0fb7024f9af966dd9b97dc1a2d1e16513 SHA256 88d937407f1fa88e959fe787475cdae15941f6c7402102eb08e1a208fba220cd
 EBUILD xorg-server-1.3.0.0-r4.ebuild 17872 RMD160 caf61a35a2486a3248dab00dc2a928dd2e11e015 SHA1 2552f8fc12bc8b446e65b912dbd86f7cf4019ec5 SHA256 fcf3d38047d812e887769b17ffe7c94035fc6376bc6b307b04190851bb3ed19c
 EBUILD xorg-server-1.3.0.0-r5.ebuild 18114 RMD160 e6fffcc39506db21aafee5e70b8bb043026d5290 SHA1 3e716d92bc096757eb29c3e1e7ae9365a1925f07 SHA256 bb90fb9650d061d42625d99aefefe4de9e032c0b8e517be7c19a5b9ea15a742d
 EBUILD xorg-server-1.3.0.0-r6.ebuild 18354 RMD160 a57fa1536d234597e58abb1a0cb5d93cb2182219 SHA1 da43242a5568a9c93e88b3e27532eb1eb67f1120 SHA256 818a5b480a0e5940ae01e81707d7600580ba495b4a42b76df021f95562a1894d
@@ -61,12 +62,13 @@ EBUILD xorg-server-1.4.0.90-r3.ebuild 19023 RMD160 6e6f374d79d0fb7ca2404e3331481
 EBUILD xorg-server-1.4.2.ebuild 17958 RMD160 7164d31633e83ad5051e201fe29eb99fa58f46d1 SHA1 bea7ae3b83083052a5ecd602c3dc0e122f4b52cc SHA256 6ed5d9bda9cd3728450701b98f67c809c3b429550cb56611568333d929624435
 EBUILD xorg-server-1.4.99.902.ebuild 17623 RMD160 4cd0504ad9601e46eaacde8aa284ff8c9051e74b SHA1 1a444b65e3604354a7e5b9f1f470b4e8ce23ba83 SHA256 f2fd80ca4797a24b70d571884a9424159b1b8828ab91135873f5866db994d96a
 EBUILD xorg-server-1.4.99.905.ebuild 17312 RMD160 7b743c041e144278eabe23b4f277884361d8b8c8 SHA1 e16264822e6d2f86d82462c4962b28b720539873 SHA256 49d62a50151814f0a9702dc818dcdadca4ad0f6a5a54fed20984360c42fc22b6
-MISC ChangeLog 84913 RMD160 62d6f371f85e73026b22ec1f3e6a6fb069bc38ce SHA1 a227dcb9856633ec172b7559c2f07ba9beb78624 SHA256 54a498076fdcc1484350fb985fbc451bb92b855045ca91333f920fa118395853
+EBUILD xorg-server-1.4.99.906.ebuild 17317 RMD160 11c60aea857bdf214d2f6aafc90d18d20d730846 SHA1 968029d4e8915e2c4fc97a605aa6281a6f69a77b SHA256 696c31edb458d85667214d1d49701f1defc51c6d67c737897cae8fdd5e6e0f9f
+MISC ChangeLog 85064 RMD160 7e8894dcf83de5f4b9ffbdf95deebac5bf3db02f SHA1 695b1afa42b6dcb4df60d0a43f2a071dc030e230 SHA256 7cc411950bf7661f220f39e8521b55f291468d3e7264ef805b7aff58fa0c4fb6
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkhv5w4ACgkQXVaO67S1rtuOhACbBiin76GI/7rIaa61kUW/HVAc
-r4cAoP2G/04jGAcPF8Kjosp32MEPYpH+
-=hFLC
+iEYEARECAAYFAkiLfUgACgkQXVaO67S1rtsk3wCgjXhZTBC5JZY4Zqs9g6FJjiuP
+WdMAoO0gENRTVN/dE3lJQmIWXhF/9HZv
+=GvpN
 -----END PGP SIGNATURE-----
