@@ -1,6 +1,12 @@
 # ChangeLog for x11-base/xorg-server
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-base/cvs-repo/gentoo-x86/x11-base/xorg-server/ChangeLog,v 1.346 2008/07/05 21:26:28 dberkholz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-base/cvs-repo/gentoo-x86/x11-base/xorg-server/ChangeLog,v 1.347 2008/07/26 19:38:41 dberkholz Exp $
+
+*xorg-server-1.4.99.906 (26 Jul 2008)
+
+  26 Jul 2008; Donnie Berkholz <dberkholz@gentoo.org>;
+  +xorg-server-1.4.99.906.ebuild:
+  Bump, keyword ~x86.
 
   05 Jul 2008; Donnie Berkholz <dberkholz@gentoo.org>;
   xorg-server-1.4.99.905.ebuild:
